# sysml-v2-sql

./: .conform.yaml  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  deny.toml  flake.nix  overlay.nix  treefmt.nix
.github/workflows/: meta.yaml  nix.yaml  release.yaml
assets/: schema.sql
example/a350-systems-lo-fi/: AviationExample.sysml  AviationLibraryATA.sysml  DemoDASC.sysml  GetAvionicsElements.sql  GetStructureElements.sql  README.md  SelectParts.sql  SelectPartsExceptLibrary.sql  model.json
example/a350-systems-lo-fi/queries/: GetAvionicsElements.sql  GetStructureElements.sql  SelectParts.sql  SelectPartsExceptLibrary.sql
pkgs/: release-package.nix  sysml-v2-sql.nix
pkgs/update-ci/: update-ci.py
src/: cli.rs  config.rs  fetch.rs  import.rs  init_db.rs  json_schema_to_sql.rs  main.rs  tweaks.rs  util.rs
src/fetch/: api_data_types.rs
src/json_schema_to_sql/: json_schema.rs  sql.rs
src/util/: stream_json.rs
tests/: basic_integration.rs  example-dump.json
